--- a/themes/clean-blog/source/css/base.styl
+++ b/themes/clean-blog/source/css/base.styl
@@ -3,12 +3,12 @@
 
 body
   @extend .serif
-  font-size 20px
+  font-size 13px
   color gray-dark
 
 p
   line-height 1.5
-  margin 30px 0
+  // margin 30px 0
 
 p, li
   a
@@ -16,7 +16,7 @@ p, li
 
 h1, h2, h3, h4, h5, h6
   @extend .sans-serif
-  font-weight 800
+  font-weight 500
 
 a
   color gray-dark
@@ -124,7 +124,7 @@ hr.small
     text-align center
     h1
       margin-top 0
-      font-size 50px
+      font-size 30px
     .subheading
       font-size 24px
       line-height 1.1
@@ -134,10 +134,10 @@ hr.small
       margin 10px 0 0
     @media only screen and (min-width: 768px)
       h1
-        font-size 80px
+        font-size 40px
   .post-heading
     h1
-      font-size 35px
+      font-size 20px
     .subheading, .meta
       line-height 1.1
       display block
@@ -155,7 +155,7 @@ hr.small
         color white
     @media only screen and (min-width: 768px)
       h1
-        font-size 55px
+        font-size 40px
       .subheading
         font-size 30px
 
@@ -167,21 +167,21 @@ hr.small
       color brand-primary
     > .post-title
       font-size 30px
-      margin-top 30px
-      margin-bottom 10px
+      margin-top 20px
+      // margin-bottom 10px
       &.archive
-        font-size 22px
+        font-size 18px
     > .post-subtitle
       margin 0
       font-weight 300
       margin-bottom 10px
   > .post-meta
     color gray
-    font-size 18px
+    font-size 12px
     font-style italic
     margin-top 0
     &.archive
-      font-size 16px
+      font-size 12px
     > a
       text-decoration none
       color gray-dark
@@ -191,10 +191,10 @@ hr.small
   @media only screen and (min-width: 768px)
     > a
       > .post-title
-        font-size 36px
+        font-size 18px
 
 .section-heading
-  font-size 36px
+  font-size 18px
   margin-top 60px
   font-weight 700
 
@@ -223,7 +223,7 @@ hr.small
 .archive-before-pagination
   height 30px
 footer
-  padding 50px 0 65px
+  padding 20px 0 10px
   .list-inline
     margin 0
     padding 0
